...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233442"
    tools:context=".taskmaster.activities.TaskDetail">

    <TextView
        android:id="@+id/activityTaskTitleViewText"
        android:layout_width="166dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="540dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/activityTaskBodyViewText"
        android:layout_width="319dp"
        android:layout_height="230dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="278dp"
...
