...
        android:text="@string/username"
        android:textAllCaps="false"
        android:textColor="#E09DEC"
        android:textColorHint="#131010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activityMainRecycleViewTasks"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <TextView
...
